--- a/Sprint1-nivell3/index.html
+++ b/Sprint1-nivell3/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-     <header class="header">
+     <header >
         <div class="menu">
             <div class="logo">
                 <img src="../Sprint1-nivell3/images/logo.png" alt="" >
@@ -37,11 +37,11 @@
         </div>
      </header>
 
-    <section class="section">
+    <section class="contenedor">
 
         <div class="articulos">
 
-            <article class="article1">
+            <article >
 
                 <div class="foto">
                     <img src="../Sprint1-nivell3/images/sakura.jpg" alt="flores de cerezo" width="640 px" height="426 px">
@@ -55,7 +55,7 @@
 
             </article>
 
-            <article class="article2">
+            <article >
 
                 <div class="foto">
 
@@ -69,7 +69,7 @@
                 <a href="" class="leermas">Leer más...</a>
             </article>
 
-            <article class="article3">
+            <article >
                 <div class="foto">
                     <img src="../Sprint1-nivell3/images/fuji.jpg" alt="monte fuji" width="640 px" height="426 px">
                     <div class="fecha">22 de abril 2021</div>
@@ -81,7 +81,7 @@
                 <a href="" class="leermas">Leer más...</a>
             </article>
 
-            <article class="article4">
+            <article >
 
                 <div class="foto">
                     <img src="../Sprint1-nivell3/images/noche.jpg" alt="calle de Japón por la noche" width="640 px" height="426 px">
@@ -97,14 +97,14 @@
             <article class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa mollitia, dolorem reprehenderit id voluptas magnam natus voluptatum vero commodi deleniti laudantium dolore cumque doloremque harum voluptate? Voluptates doloribus amet eveniet.</article>
         </div>
 
-         <aside class="aside">
+         <aside >
             <div class="titulo-aside"><strong>Something</strong></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam saepe vero et dolores est tempora eveniet cupiditate rerum atque quae voluptates odio laudantium beatae molestias exercitationem veritatis ratione quas molestiae, minima quo possimus harum at modi eum. Expedita voluptatibus error, molestias voluptatem dolor optio sit eaque exercitationem, quaerat nemo pariatur!</p>
         </aside>
 
     </section>
     
-    <footer class="footer">
+    <footer >
         <div class="pie-pagina">©2021 Japan Tourism</div>
     </footer>
     
